Added stylesheet and google header image

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Google</title>
 </head>
-
 <body>
     <div class="viewport">
         <div id="navbar">
@@ -16,11 +16,11 @@
             </div>
         </div>
         <div id="searchform">
+            <img id="google-img" src="https://s3b.cashify.in/gpro/uploads/2020/04/02060122/google-phone-news.jpg"></img>
             <form class="search" role="search">
                 <input id="searchbar" type="text">
                 <input id="search-button" type="submit" value="Search">
             </form>
-        </div>
-        
+        </div>        
     </div>
 </body>
