Header Aligned, image aligned and footer aligned

--- a/index.html
+++ b/index.html
@@ -20,7 +20,22 @@
             <form class="search" role="search">
                 <input id="searchbar" type="text">
                 <input id="search-button" type="submit" value="Search">
+                <input id="lucky-button" type="submit" value="Feelin' Lucky">
             </form>
         </div>        
     </div>
 </body>
+<footer>
+    <div id="footer-bar">
+        <div id="left-footer">
+            <a href="#">Advertising</a>
+            <a href="#">Business</a>
+            <a href="#">How Search works</a>
+        </div>
+        <div id="right-footer">
+            <a href="#">Privacy</a>
+            <a href="#">Terms</a>
+            <a href="#">Settings</a>
+        </div>
+    </div>
+</footer>
