Added search form styles and button styles

--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
             <img id="google-img" src="https://s3b.cashify.in/gpro/uploads/2020/04/02060122/google-phone-news.jpg"></img>
             <form class="search" role="search">
                 <input id="searchbar" type="text">
-                <input id="search-button" type="submit" value="Search">
-                <input id="lucky-button" type="submit" value="Feelin' Lucky">
+                
             </form>
+            <button id="search-button" type="button">Google Search</button>
+            <button id="lucky-button" type="button" value="Feelin' Lucky">I'm Feelin' Lucky</button>
         </div>        
     </div>
 </body>
